force-app/main/default/objects/CLQ_BCII_FBI__c/CLQ_BCII_FBI__c.object-meta.xml
<CustomObject>
    <description>This object is used to store  Criminal Background check information.</description>
    <label>BCI FBI Lookup</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>SEQUENCE_NUMBER</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BCI FBI Lookup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>