force-app/main/default/objects/CLQ_BCII_FBI__c/fields/CLQ_Agency_Code__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Agency_Code__c</fullName>
    <description>ID of the entity requesting the background check i.e. school, nursing home, police dept.</description>
    <label>Agency Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>