force-app/main/default/objects/CLQ_BCII_FBI__c/fields/CLQ_Approval_Reject_Comments__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Approval_Reject_Comments__c</fullName>
    <description>Field to store approval\reject comments</description>
    <label>Comments</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>