force-app/main/default/objects/CLQ_BCII_FBI__c/fields/CLQ_Date_Completed_By_BCI__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Date_Completed_By_BCI__c</fullName>
    <description>In Mmddcccyy format.</description>
    <label>Date Completed By BCI</label>
    <type>Date</type>
</CustomField>