force-app/main/default/objects/CLQ_BCII_FBI__c/fields/CLQ_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Date_of_Birth__c</fullName>
    <description>Date of Birth in Mmddccyy format.</description>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>