force-app/main/default/objects/CLQ_BCII_FBI__c/fields/CLQ_Date_of_Birth_Text__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Date_of_Birth_Text__c</fullName>
    <description>Used for Integration_BCII Duplication Rule matching Criteria. Updated by Workflow Rule - Integration_BCII_DOB_TextField_Update</description>
    <label>Date of Birth Text-DoNotDisplay</label>
    <length>30</length>
    <type>Text</type>
</CustomField>