force-app/main/default/objects/CLQ_BCII_FBI__c/fields/CLQ_Date_Received_At_BCI__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Date_Received_At_BCI__c</fullName>
    <description>in Mmddccyy format.</description>
    <label>Date Received At BCI</label>
    <type>Date</type>
</CustomField>