force-app/main/default/objects/CLQ_BCII_FBI__c/fields/CLQ_First_Name__c.field-meta.xml
<CustomField>
    <fullName>CLQ_First_Name__c</fullName>
    <description>First Name information.</description>
    <label>First Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>