force-app/main/default/objects/CLQ_BCII_FBI__c/fields/CLQ_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Last_Name__c</fullName>
    <description>Last name information.</description>
    <label>Last Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>