force-app/main/default/objects/CLQ_BCII_FBI__c/fields/CLQ_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Middle_Name__c</fullName>
    <description>Middle Name</description>
    <label>Middle Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>