force-app/main/default/objects/CLQ_BCII_FBI__c/fields/CLQ_Record_Check_Results__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Record_Check_Results__c</fullName>
    <description>Background check result.</description>
    <label>Record Check Results</label>
    <length>10</length>
    <type>Text</type>
</CustomField>