force-app/main/default/objects/CLQ_BCII_FBI__c/fields/CLQ_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Rejection_Reason__c</fullName>
    <description>Field to store rejection reason when a BCII FBI related contact record is deleted</description>
    <label>Rejection Reason</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>