force-app/main/default/objects/CLQ_BCII_FBI__c/fields/CLQ_Result_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Result_Type__c</fullName>
    <label>Result Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>