force-app/main/default/objects/CLQ_BCII_FBI__c/fields/CLQ_SSN_Integration__c.field-meta.xml
<CustomField>
    <fullName>CLQ_SSN_Integration__c</fullName>
    <description>Shield Platform Encrypted Field</description>
    <inlineHelpText>Social Security Number.</inlineHelpText>
    <label>SSN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>