force-app/main/default/objects/CLQ_BCII_FBI__c/fields/CLQ_Transaction_Authentication__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Transaction_Authentication__c</fullName>
    <description>Tracking Number used by OHIO AFIS to log the transaction activity.</description>
    <label>Transaction/Authentication #</label>
    <length>16</length>
    <type>Text</type>
</CustomField>