force-app/main/default/objects/CLQ_BCII_FBI__c/fields/CLQ_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Transaction_Type__c</fullName>
    <description>Indicates type of background check.</description>
    <label>Transaction Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>